로그인 약간 수정

--- a/project/UIProject_login.html
+++ b/project/UIProject_login.html
@@ -141,6 +141,8 @@
             margin: 0 auto;
             display: block;
             font-size: 20px;
+            font-weight: bold;
+            color: rgb(48, 48, 48);
         }
         .login input[type=text], input[type=password] {
             width: 70%;
