이미지 경로 수정

--- a/project/UIproject_main.html
+++ b/project/UIproject_main.html
@@ -38,7 +38,7 @@
         header {
             width: 100%;
             height: 100vh;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0,0.7)), url("/imgProject/header.jpg");
+            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0,0.7)), url("header.jpg");
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -219,7 +219,7 @@
             /* height: 100%; */
         }
         .sec1 {
-            background-image: linear-gradient(to bottom, rgba(27, 54, 85, 0.9), rgba(33, 69, 110, 0.5)), url("/imgProject/sec1_bg.jpg");
+            background-image: linear-gradient(to bottom, rgba(27, 54, 85, 0.9), rgba(33, 69, 110, 0.5)), url("sec1_bg.jpg");
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -297,16 +297,16 @@
             transform: translate(-50%, -50%);
         }
         .sec2atc3 div.sec2atc3img1 {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0,0.4)), url("/imgProject/sec2_bg1.jpg");
+            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0,0.4)), url("sec2_bg1.jpg");
         }
         .sec2atc3 div.sec2atc3img2 {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0,0.4)), url("/imgProject/sec2_bg2.jpg");
+            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0,0.4)), url("sec2_bg2.jpg");
         }
         .sec2atc3 div.sec2atc3img3 {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0,0.4)), url("/imgProject/sec2_bg3.jpg");
+            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0,0.4)), url("sec2_bg3.jpg");
         }
         .sec2atc3 div.sec2atc3img4 {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0,0.4)), url("/imgProject/sec2_bg4.jpg");
+            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0,0.4)), url("sec2_bg4.jpg");
         }
         .sec2atc4 {
             width: 100%;
@@ -398,16 +398,16 @@
             margin: 3% auto;
         }
         .sec3atc2img1 {
-            background-image: url("/imgProject/sec3_bg1.jpg");
+            background-image: url("sec3_bg1.jpg");
         }
         .sec3atc2img2 {
-            background-image: url("/imgProject/sec3_bg2.jpg");
+            background-image: url("sec3_bg2.jpg");
         }
         .sec3atc2img3 {
-            background-image: url("/imgProject/sec3_bg3.jpg");
+            background-image: url("sec3_bg3.jpg");
         }
         .sec3atc2img4 {
-            background-image: url("/imgProject/sec3_bg4.jpg");
+            background-image: url("sec3_bg4.jpg");
         }
         .movebox p {
             margin: 3%;
@@ -456,7 +456,7 @@
             text-align: center;
             font-size: 14px;
             color: white;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0,0.7)), url("/imgProject/sec4_bg.jpg");
+            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0,0.7)), url("sec4_bg.jpg");
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -499,7 +499,7 @@
             mix-blend-mode: normal;
         }
         .sec5 {
-            background-image: linear-gradient(rgba(48, 54, 105, 0.5), rgba(48, 54, 105, 0.5)), url("/imgProject/sec5_bg.jpg");
+            background-image: linear-gradient(rgba(48, 54, 105, 0.5), rgba(48, 54, 105, 0.5)), url("sec5_bg.jpg");
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -635,7 +635,7 @@
         .sec6atc2 {
             width: 100%;
             height: 500px;
-            background-image: url("/imgProject/sec6_img.png");
+            background-image: url("sec6_img.png");
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -790,31 +790,31 @@
                 position: absolute;
             }
             .sec2atc3 div.sec2atc3img1 {
-                background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("/imgProject/sec2_bg1.jpg");
+                background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("sec2_bg1.jpg");
             }
             .sec2atc3 div.sec2atc3img1:hover {
-                background-image: linear-gradient(rgba(50, 207, 50, 0.9), rgba(50, 207, 50, 0.9)), url("/imgProject/sec2_bg1.jpg");
+                background-image: linear-gradient(rgba(50, 207, 50, 0.9), rgba(50, 207, 50, 0.9)), url("sec2_bg1.jpg");
             }
             .sec2atc3 div.sec2atc3img2 {
-                background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("/imgProject/sec2_bg2.jpg");
+                background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("sec2_bg2.jpg");
                 left: 25.5%;
             }
             .sec2atc3 div.sec2atc3img2:hover {
-                background-image: linear-gradient(rgba(50, 207, 50, 0.9), rgba(50, 207, 50, 0.9)), url("/imgProject/sec2_bg2.jpg");
+                background-image: linear-gradient(rgba(50, 207, 50, 0.9), rgba(50, 207, 50, 0.9)), url("sec2_bg2.jpg");
             }
             .sec2atc3 div.sec2atc3img3 {
-                background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("/imgProject/sec2_bg3.jpg");
+                background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("sec2_bg3.jpg");
                 left: 51%;
             }
             .sec2atc3 div.sec2atc3img3:hover {
-                background-image: linear-gradient(rgba(50, 207, 50, 0.9), rgba(50, 207, 50, 0.9)), url("/imgProject/sec2_bg3.jpg");
+                background-image: linear-gradient(rgba(50, 207, 50, 0.9), rgba(50, 207, 50, 0.9)), url("sec2_bg3.jpg");
             }
             .sec2atc3 div.sec2atc3img4 {
-                background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("/imgProject/sec2_bg4.jpg");
+                background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("sec2_bg4.jpg");
                 left: 76.5%;
             }
             .sec2atc3 div.sec2atc3img4:hover {
-                background-image: linear-gradient(rgba(50, 207, 50, 0.9), rgba(50, 207, 50, 0.9)), url("/imgProject/sec2_bg4.jpg");
+                background-image: linear-gradient(rgba(50, 207, 50, 0.9), rgba(50, 207, 50, 0.9)), url("sec2_bg4.jpg");
             }
             .sec2atc3 i {
                 font-size: 50px;
@@ -1014,12 +1014,12 @@
         <div class="emptybox"></div>
         <nav>
             <div class="small_nav">
-                <img src="/imgProject/logo_black.png" alt="logo">
+                <img src="logo_black.png" alt="logo">
                 <i class="fas fa-bars"></i>
                 <!--메뉴 넣기-->
             </div>
             <div class="big_nav">
-                <img src="/imgProject/logo_black.png" alt="logo">
+                <img src="logo_black.png" alt="logo">
                 <ul>
                     <li><a href=""><span>회사소개</span><span class="under"></span></a></li>
                     <li><a href=""><span>프로젝트</span><span class="under"></span></a></li>
@@ -1032,7 +1032,7 @@
         </nav>
 
         <header class="page">
-            <div class="logo"><img src="/imgProject/logo_white.png" alt="logo"></div>
+            <div class="logo"><img src="logo_white.png" alt="logo"></div>
             <div class="header_p_wrap">
                 <div><p class="header_p">더 나은 가치에 대해 고민합니다.</p></div>
                 <div class="middlebar"></div>
@@ -1150,18 +1150,18 @@
             <article class="sec4atc1">파트너</article>
             <article class="sec4atc2">INIT은 성공적인 파트너쉽으로 인정받고 있습니다.</article>
             <article class="sec4atc3">
-                <div class="pt1"><img src="/imgProject/sec4_img1.png" alt=""></div>
-                <div class="pt2"><img src="/imgProject/sec4_img2.png" alt=""></div>
-                <div class="pt3"><img src="/imgProject/sec4_img3.png" alt=""></div>
-                <div class="pt4"><img src="/imgProject/sec4_img4.png" alt=""></div>
-                <div class="pt5"><img src="/imgProject/sec4_img5.png" alt=""></div>
-                <div class="pt6"><img src="/imgProject/sec4_img6.png" alt=""></div>
-                <div class="pt7"><img src="/imgProject/sec4_img7.png" alt=""></div>
-                <div class="pt8"><img src="/imgProject/sec4_img8.png" alt=""></div>
-                <div class="pt9"><img src="/imgProject/sec4_img9.png" alt=""></div>
-                <div class="pt10"><img src="/imgProject/sec4_img10.png" alt=""></div>
-                <div class="pt11"><img src="/imgProject/sec4_img11.png" alt=""></div>
-                <div class="pt12"><img src="/imgProject/sec4_img12.png" alt=""></div>
+                <div class="pt1"><img src="sec4_img1.png" alt=""></div>
+                <div class="pt2"><img src="sec4_img2.png" alt=""></div>
+                <div class="pt3"><img src="sec4_img3.png" alt=""></div>
+                <div class="pt4"><img src="sec4_img4.png" alt=""></div>
+                <div class="pt5"><img src="sec4_img5.png" alt=""></div>
+                <div class="pt6"><img src="sec4_img6.png" alt=""></div>
+                <div class="pt7"><img src="sec4_img7.png" alt=""></div>
+                <div class="pt8"><img src="sec4_img8.png" alt=""></div>
+                <div class="pt9"><img src="sec4_img9.png" alt=""></div>
+                <div class="pt10"><img src="sec4_img10.png" alt=""></div>
+                <div class="pt11"><img src="sec4_img11.png" alt=""></div>
+                <div class="pt12"><img src="sec4_img12.png" alt=""></div>
             </article>
         </section>
 
@@ -1256,7 +1256,7 @@
         </section>
 
         <footer class="page">
-            <div class="logo"><img src="/imgProject/logo_white.png" alt="logo"></div>
+            <div class="logo"><img src="logo_white.png" alt="logo"></div>
             <div class="companyInfo">
                 <p>(주)INIT</p>
                 <p>부산광역시 부산진구 중앙대로 749, 혜도빌딩 4층&nbsp;&nbsp;&nbsp;Tel.051-912-1000</p>
