--- a/project/UIProject_login.html
+++ b/project/UIProject_login.html
@@ -106,7 +106,7 @@
         .topimg {
             width: 100%;
             height: 40%;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0,0.4)), url("/imgProject/login_bg.jpg");
+            background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0,0.4)), url("login_bg.jpg");
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -245,7 +245,7 @@
         <div class="emptybox"></div>
         <nav>
             <div class="big_nav">
-                <img src="/imgProject/logo_black.png" alt="logo">
+                <img src="logo_black.png" alt="logo">
                 <ul>
                     <li><a href=""><span>회사소개</span><span class="under"></span></a></li>
                     <li><a href=""><span>프로젝트</span><span class="under"></span></a></li>
@@ -277,7 +277,7 @@
         </section>
 
         <footer class="page">
-            <div class="logo"><img src="/imgProject/logo_white.png" alt="logo"></div>
+            <div class="logo"><img src="logo_white.png" alt="logo"></div>
             <div class="companyInfo">
                 <p>(주)INIT</p>
                 <p>부산광역시 부산진구 중앙대로 749, 혜도빌딩 4층&nbsp;&nbsp;&nbsp;Tel.051-912-1000</p>
